Temporary fix to white space underneath Admin Panel

--- a/company_dashboard/src/components/Admin/AdminPanel.css
+++ b/company_dashboard/src/components/Admin/AdminPanel.css
@@ -1,8 +1,8 @@
 .admin-panel-container {
   background-color: #EAEAEA;
-  /* height: auto;
-  padding-top: 5%; */
-}
+  height: 100vh;
+  padding-top: 5%;
+ }
 
 .admin-panel {
   width: 65%;
